gen/grammar/biolingoParser.java
// Generated from grammar/biolingo.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class biolingoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, DNA_SEQ=56, RNA_SEQ=57, PROTEIN_SEQ=58, 
		BOOLEAN=59, NUMBER=60, STRING=61, ID=62, LINE_COMMENT=63, BLOCK_COMMENT=64, 
		WS=65;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_import_stmt = 2, RULE_assignment_stmt = 3, 
		RULE_print_stmt = 4, RULE_train_markov_stmt = 5, RULE_find_genes_stmt = 6, 
		RULE_markov_config = 7, RULE_markov_params = 8, RULE_markov_param = 9, 
		RULE_query_stmt = 10, RULE_source = 11, RULE_where_clause = 12, RULE_select_clause = 13, 
		RULE_select_list = 14, RULE_select_item = 15, RULE_limit_clause = 16, 
		RULE_condition = 17, RULE_comparison = 18, RULE_comp_op = 19, RULE_expression = 20, 
		RULE_expr_list = 21, RULE_function_call = 22, RULE_arg_list = 23, RULE_func_name = 24, 
		RULE_basic_func = 25, RULE_agg_func = 26, RULE_literal = 27, RULE_percentage = 28, 
		RULE_sequence_literal = 29;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "import_stmt", "assignment_stmt", "print_stmt", 
			"train_markov_stmt", "find_genes_stmt", "markov_config", "markov_params", 
			"markov_param", "query_stmt", "source", "where_clause", "select_clause", 
			"select_list", "select_item", "limit_clause", "condition", "comparison", 
			"comp_op", "expression", "expr_list", "function_call", "arg_list", "func_name", 
			"basic_func", "agg_func", "literal", "percentage", "sequence_literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'IMPORT'", "'AS'", "'='", "'PRINT'", "'TRAIN_MARKOV'", 
			"'ON'", "'WITH'", "'FIND_GENES'", "'IN'", "'USING'", "'markov'", "'('", 
			"')'", "','", "'order'", "'threshold'", "'min_length'", "'model'", "'window'", 
			"'FIND'", "'sequences'", "'FROM'", "'WHERE'", "'SELECT'", "'LIMIT'", 
			"'AND'", "'OR'", "'NOT'", "'CONTAINS'", "'BETWEEN'", "'!='", "'<'", "'<='", 
			"'>'", "'>='", "'*'", "'/'", "'%'", "'+'", "'-'", "'.'", "'~'", "'<-'", 
			"'~<-'", "'length'", "'gc_content'", "'complement'", "'reverse'", "'translate'", 
			"'COUNT'", "'AVG'", "'MIN'", "'MAX'", "'SUM'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "DNA_SEQ", "RNA_SEQ", 
			"PROTEIN_SEQ", "BOOLEAN", "NUMBER", "STRING", "ID", "LINE_COMMENT", "BLOCK_COMMENT", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "biolingo.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public biolingoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(biolingoParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof biolingoListener ) ((biolingoListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof biolingoListener ) ((biolingoListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(60);
				statement();
				}
				}
				setState(63); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 4611686018429485670L) != 0) );
			setState(65);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public Import_stmtContext import_stmt() {
			return getRuleContext(Import_stmtContext.class,0);
		}
		public Assignment_stmtContext assignment_stmt() {
			return getRuleContext(Assignment_stmtContext.class,0);
		}
		public Query_stmtContext query_stmt() {
			return getRuleContext(Query_stmtContext.class,0);
		}
		public Find_genes_stmtContext find_genes_stmt() {
			return getRuleContext(Find_genes_stmtContext.class,0);
		}
		public Train_markov_stmtContext train_markov_stmt() {
			return getRuleContext(Train_markov_stmtContext.class,0);
		}
		public Print_stmtContext print_stmt() {
			return getRuleContext(Print_stmtContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof biolingoListener ) ((biolingoListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof biolingoListener ) ((biolingoListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(74);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				setState(67);
				import_stmt();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(68);
				assignment_stmt();
				}
				break;
			case T__20:
				enterOuterAlt(_localctx, 3);
				{
				setState(69);
				query_stmt();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 4);
				{
				setState(70);
				find_genes_stmt();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 5);
				{
				setState(71);
				train_markov_stmt();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 6);
				{
				setState(72);
				print_stmt();
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 7);
				{
				setState(73);
				match(T__0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Import_stmtContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(biolingoParser.STRING, 0); }
		public TerminalNode ID() { return getToken(biolingoParser.ID, 0); }
		public Import_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof biolingoListener ) ((biolingoListener)listener).enterImport_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof biolingoListener ) ((biolingoListener)listener).exitImport_stmt(this);
		}
	}

	public final Import_stmtContext import_stmt() throws RecognitionException {
		Import_stmtContext _localctx = new Import_stmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_import_stmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(T__1);
			setState(77);
			match(STRING);
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(78);
				match(T__2);
				setState(79);
				match(ID);
				}
			}

			setState(82);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Assignment_stmtContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(biolingoParser.ID, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Assignment_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof biolingoListener ) ((biolingoListener)listener).enterAssignment_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof biolingoListener ) ((biolingoListener)listener).exitAssignment_stmt(this);
		}
	}

	public final Assignment_stmtContext assignment_stmt() throws RecognitionException {
		Assignment_stmtContext _localctx = new Assignment_stmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_assignment_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(ID);
			setState(85);
			match(T__3);
			setState(86);
			expression(0);
			setState(87);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Print_stmtContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Print_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof biolingoListener ) ((biolingoListener)listener).enterPrint_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof biolingoListener ) ((biolingoListener)listener).exitPrint_stmt(this);
		}
	}

	public final Print_stmtContext print_stmt() throws RecognitionException {
		Print_stmtContext _localctx = new Print_stmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_print_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(T__4);
			setState(90);
			expression(0);
			setState(91);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Train_markov_stmtContext extends ParserRuleContext {
		public SourceContext source() {
			return getRuleContext(SourceContext.class,0);
		}
		public Markov_paramsContext markov_params() {
			return getRuleContext(Markov_paramsContext.class,0);
		}
		public Train_markov_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_train_markov_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof biolingoListener ) ((biolingoListener)listener).enterTrain_markov_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof biolingoListener ) ((biolingoListener)listener).exitTrain_markov_stmt(this);
		}
	}

	public final Train_markov_stmtContext train_markov_stmt() throws RecognitionException {
		Train_markov_stmtContext _localctx = new Train_markov_stmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_train_markov_stmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(T__5);
			setState(94);
			match(T__6);
			setState(95);
			source();
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__7) {
				{
				setState(96);
				match(T__7);
				setState(97);
				markov_params();
				}
			}

			setState(100);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Find_genes_stmtContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Markov_configContext markov_config() {
			return getRuleContext(Markov_configContext.class,0);
		}
		public Find_genes_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_find_genes_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof biolingoListener ) ((biolingoListener)listener).enterFind_genes_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof biolingoListener ) ((biolingoListener)listener).exitFind_genes_stmt(this);
		}
	}

	public final Find_genes_stmtContext find_genes_stmt() throws RecognitionException {
		Find_genes_stmtContext _localctx = new Find_genes_stmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_find_genes_stmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(T__8);
			setState(103);
			match(T__9);
			setState(104);
			expression(0);
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__10) {
				{
				setState(105);
				match(T__10);
				setState(106);
				markov_config();
				}
			}

			setState(109);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Markov_configContext extends ParserRuleContext {
		public Markov_paramsContext markov_params() {
			return getRuleContext(Markov_paramsContext.class,0);
		}
		public Markov_configContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_markov_config; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof biolingoListener ) ((biolingoListener)listener).enterMarkov_config(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof biolingoListener ) ((biolingoListener)listener).exitMarkov_config(this);
		}
	}

	public final Markov_configContext markov_config() throws RecognitionException {
		Markov_configContext _localctx = new Markov_configContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_markov_config);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(T__11);
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__12) {
				{
				setState(112);
				match(T__12);
				setState(113);
				markov_params();
				setState(114);
				match(T__13);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Markov_paramsContext extends ParserRuleContext {
		public List<Markov_paramContext> markov_param() {
			return getRuleContexts(Markov_paramContext.class);
		}
		public Markov_paramContext markov_param(int i) {
			return getRuleContext(Markov_paramContext.class,i);
		}
		public Markov_paramsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_markov_params; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof biolingoListener ) ((biolingoListener)listener).enterMarkov_params(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof biolingoListener ) ((biolingoListener)listener).exitMarkov_params(this);
		}
	}

	public final Markov_paramsContext markov_params() throws RecognitionException {
		Markov_paramsContext _localctx = new Markov_paramsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_markov_params);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			markov_param();
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__14) {
				{
				{
				setState(119);
				match(T__14);
				setState(120);
				markov_param();
				}
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Markov_paramContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(biolingoParser.NUMBER, 0); }
		public TerminalNode STRING() { return getToken(biolingoParser.STRING, 0); }
		public Markov_paramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_markov_param; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof biolingoListener ) ((biolingoListener)listener).enterMarkov_param(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof biolingoListener ) ((biolingoListener)listener).exitMarkov_param(this);
		}
	}

	public final Markov_paramContext markov_param() throws RecognitionException {
		Markov_paramContext _localctx = new Markov_paramContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_markov_param);
		try {
			setState(141);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__15:
				enterOuterAlt(_localctx, 1);
				{
				setState(126);
				match(T__15);
				setState(127);
				match(T__3);
				setState(128);
				match(NUMBER);
				}
				break;
			case T__16:
				enterOuterAlt(_localctx, 2);
				{
				setState(129);
				match(T__16);
				setState(130);
				match(T__3);
				setState(131);
				match(NUMBER);
				}
				break;
			case T__17:
				enterOuterAlt(_localctx, 3);
				{
				setState(132);
				match(T__17);
				setState(133);
				match(T__3);
				setState(134);
				match(NUMBER);
				}
				break;
			case T__18:
				enterOuterAlt(_localctx, 4);
				{
				setState(135);
				match(T__18);
				setState(136);
				match(T__3);
				setState(137);
				match(STRING);
				}
				break;
			case T__19:
				enterOuterAlt(_localctx, 5);
				{
				setState(138);
				match(T__19);
				setState(139);
				match(T__3);
				setState(140);
				match(NUMBER);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Query_stmtContext extends ParserRuleContext {
		public SourceContext source() {
			return getRuleContext(SourceContext.class,0);
		}
		public Where_clauseContext where_clause() {
			return getRuleContext(Where_clauseContext.class,0);
		}
		public Select_clauseContext select_clause() {
			return getRuleContext(Select_clauseContext.class,0);
		}
		public Limit_clauseContext limit_clause() {
			return getRuleContext(Limit_clauseContext.class,0);
		}
		public Query_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof biolingoListener ) ((biolingoListener)listener).enterQuery_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof biolingoListener ) ((biolingoListener)listener).exitQuery_stmt(this);
		}
	}

	public final Query_stmtContext query_stmt() throws RecognitionException {
		Query_stmtContext _localctx = new Query_stmtContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_query_stmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(T__20);
			setState(144);
			match(T__21);
			setState(145);
			match(T__22);
			setState(146);
			source();
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__23) {
				{
				setState(147);
				where_clause();
				}
			}

			setState(151);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__24) {
				{
				setState(150);
				select_clause();
				}
			}

			setState(154);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__25) {
				{
				setState(153);
				limit_clause();
				}
			}

			setState(156);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SourceContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(biolingoParser.STRING, 0); }
		public TerminalNode ID() { return getToken(biolingoParser.ID, 0); }
		public SourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_source; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof biolingoListener ) ((biolingoListener)listener).enterSource(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof biolingoListener ) ((biolingoListener)listener).exitSource(this);
		}
	}

	public final SourceContext source() throws RecognitionException {
		SourceContext _localctx = new SourceContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_source);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			_la = _input.LA(1);
			if ( !(_la==STRING || _la==ID) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Where_clauseContext extends ParserRuleContext {
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public Where_clauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_where_clause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof biolingoListener ) ((biolingoListener)listener).enterWhere_clause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof biolingoListener ) ((biolingoListener)listener).exitWhere_clause(this);
		}
	}

	public final Where_clauseContext where_clause() throws RecognitionException {
		Where_clauseContext _localctx = new Where_clauseContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_where_clause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(T__23);
			setState(161);
			condition(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Select_clauseContext extends ParserRuleContext {
		public Select_listContext select_list() {
			return getRuleContext(Select_listContext.class,0);
		}
		public Select_clauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_select_clause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof biolingoListener ) ((biolingoListener)listener).enterSelect_clause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof biolingoListener ) ((biolingoListener)listener).exitSelect_clause(this);
		}
	}

	public final Select_clauseContext select_clause() throws RecognitionException {
		Select_clauseContext _localctx = new Select_clauseContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_select_clause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			match(T__24);
			setState(164);
			select_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
